@@ -4,3 +4,5 @@
 	- Fixed sound problems in Casper
 	- Savestates, SRAMs and configfiles are now placed in the appdata dir, not alongside the ROM anymore
 	- Speed factor selectable
+	- Speed improvements
+	- Double buffering enabled
